--- a/responsive-design.css
+++ b/responsive-design.css
@@ -1,138 +1,1 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-
-.container{
-  width: 100%;
-  margin: auto;
-}
-
-/* Different sidebar for mobile / desktop */
-.screen-only { display: none;}
-.mobile-only { display: block;}
-
-@media (min-width: 480px){
-.screen-only { display: block;}
-.mobile-only { display: none;}
-}
-
-.row{
-  clear: left; /* forces div elements positioned after an element which has a "float:left" property, not to stay stuck to it */
-  }
-
-/* general properties of columns */
-.column-left{float: left; /* The elements places itself on the right or left side of its container*/
-             margin-left: 4%;} /* Adds a margin to each column >> So we need to define each column as smaller so they all fit in the page*/
-
-.column-right{float: right; /* The elements places itself on the right or left side of its container*/
-              margin-left: 4%;}
-
-.column-no-margin:first-child { /*removes the margin from the first column - comment when first column is offseted */
-        /*margin-left: 0;*/}
-
-/* Define column sizes for mobile*/
-
-.col-xs-1                { width: 4.66666666667%; }
-.col-xs-2                { width: 13.3333333333%; }
-.col-xs-3                { width: 22%;            }
-.col-xs-4                { width: 30.6666666667%; }
-.col-xs-5                { width: 39.3333333333%; }
-.col-xs-6                { width: 48%;            }
-.col-xs-7                { width: 56.6666666667%; }
-.col-xs-8                { width: 65.3333333333%; }
-.col-xs-9                { width: 74.0%;          }
-.col-xs-10               { width: 82.6666666667%; }
-.col-xs-11               { width: 91.3333333333%; }
-.col-xs-12               { width: 100%; margin-left: 0; }
-
-/* Define column sizes for phtablets */
-@media(min-width: 480px) {
-  .col-sm-1-fixed                   { width:130px;}
-
-  .col-sm-1                { width: 4.66666666667%; }
-  .col-sm-2                { width: 13.3333333333%; }
-  .col-sm-3                { width: 22%;            }
-  .col-sm-4                { width: 30.6666666667%; }
-  .col-sm-5                { width: 39.3333333333%; }
-}
-
-@media(min-width: 900px) {
-  .col-md-1-and-a-half              { width: 6.66666666668%;} /* overrides col-sm-1-fixed defined before (the last property applied to an element in css overrides the one before in the code flow)*/
-  .col-md-2                { width: 4.66666666667%; }
-  .col-md-3                { width: 13.3333333333%; }
-  .col-md-4                { width: 22%;            }
-  .col-md-5                { width: 30.6666666667%; }
-  .col-md-6                { width: 39.3333333333%; }
-
-}
-
-
-/* Offsets */ /* Offset starts at the end of the previous div of content, not the start of the page */
-
-.offset-xs-1            { margin-left: 8.66666666667%; }
-.offset-xs-2            { margin-left: 17.3333333333%; }
-.offset-xs-3            { margin-left: 26%;            }
-.offset-xs-4            { margin-left: 34.6666666667%; }
-.offset-xs-5            { margin-left: 43.3333333333%; }
-.offset-xs-6            { margin-left: 52%;            }
-.offset-xs-7            { margin-left: 60.6666666667%; }
-.offset-xs-8            { margin-left: 69.3333333333%; }
-.offset-xs-9            { margin-left: 78.0%;          }
-.offset-xs-10           { margin-left: 86.6666666667%; }
-.offset-xs-11           { margin-left: 95.3333333333%; }
-
-/* Base Styles
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* NOTE
-html is set to 62.5% so that all the REM measurements throughout Skeleton
-are based on 10px sizing. So basically 1.5rem = 15px :) */
-html {
-  font-size: 62.5%; }
-body {
-  font-size: 1.4em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: white;
-  font-weight: 400; }
-
-.sidebar{
-  font-size: 0.9em;
-}
-
-/* Typography
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 2.5rem;
-  font-weight: 700;
-}
-h1 { font-size: 3.0rem; line-height: 1;  letter-spacing: -.1rem; padding-bottom:2%;}
-
-/* Larger than phablet */
-@media (min-width: 400px) {
-  h1 { font-size: 4rem; }
-}
-
-@media (min-width: 900px) {
-  h1 { font-size: 6rem; }
-}
-
-p {
-  margin-bottom: 25px; }
-
-
-
-/* Clearing
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-/* Self Clearing Goodness */
-.container:after,
-.row:after,
-.u-cf {
-  content: "";
-  display: table;
-  clear: both; }
-
-
-
+*{margin:0;padding:0}.container{width:100%;margin:auto}.screen-only{display:none}.mobile-only{display:block}@media (min-width:480px){.screen-only{display:block}.mobile-only{display:none}}.row{clear:left}.column-left{float:left;margin-left:4%}.column-right{float:right;margin-left:4%}.col-xs-1{width:4.66666666667%}.col-xs-2{width:13.3333333333%}.col-xs-3{width:22%}.col-xs-4{width:30.6666666667%}.col-xs-5{width:39.3333333333%}.col-xs-6{width:48%}.col-xs-7{width:56.6666666667%}.col-xs-8{width:65.3333333333%}.col-xs-9{width:74%}.col-xs-10{width:82.6666666667%}.col-xs-11{width:91.3333333333%}.col-xs-12{width:100%;margin-left:0}@media(min-width:480px){.col-sm-1-fixed{width:130px}.col-sm-1{width:4.66666666667%}.col-sm-2{width:13.3333333333%}.col-sm-3{width:22%}.col-sm-4{width:30.6666666667%}.col-sm-5{width:39.3333333333%}}@media(min-width:900px){.col-md-1-and-a-half{width:6.66666666668%}.col-md-2{width:4.66666666667%}.col-md-3{width:13.3333333333%}.col-md-4{width:22%}.col-md-5{width:30.6666666667%}.col-md-6{width:39.3333333333%}}.offset-xs-1{margin-left:8.66666666667%}.offset-xs-2{margin-left:17.3333333333%}.offset-xs-3{margin-left:26%}.offset-xs-4{margin-left:34.6666666667%}.offset-xs-5{margin-left:43.3333333333%}.offset-xs-6{margin-left:52%}.offset-xs-7{margin-left:60.6666666667%}.offset-xs-8{margin-left:69.3333333333%}.offset-xs-9{margin-left:78%}.offset-xs-10{margin-left:86.6666666667%}.offset-xs-11{margin-left:95.3333333333%}html{font-size:62.5%}body{font-size:1.4em;line-height:1.6;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#fff;font-weight:400}.sidebar{font-size:.9em}h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:2.5rem;font-weight:700}h1{font-size:3rem;line-height:1;letter-spacing:-.1rem;padding-bottom:2%}@media (min-width:400px){h1{font-size:4rem}}@media (min-width:900px){h1{font-size:6rem}}p{margin-bottom:25px}.container:after,.row:after,.u-cf{content:"";display:table;clear:both}
