minification doesnt work

--- a/index.css
+++ b/index.css
@@ -1,1 +1,105 @@
-.fixed-content,.fixed-sidebar{position:fixed}button,button:hover{border:3.8px solid #fff}body{background-image:url(images/FJORD_CT_Test_Asset_background_full.jpg);height:3008px}.content-flex,.sidebar{height:100vh;display:flex}.fixed-sidebar{top:0;right:0}.sidebar{background:#fff;flex-direction:column;justify-content:space-around;text-align:justify;-moz-text-align-last:center;text-align-last:center;color:#000;margin-bottom:9px}.circle,button{display:inline-block;cursor:pointer}.content{padding-top:20px;margin:auto}.text{padding-bottom:10%}img{width:45px;padding-bottom:27px}button{height:60px;margin:3px;text-transform:uppercase;text-decoration:none;color:#fff;background-color:transparent;font-size:90%;font-weight:700;padding:0 55px}button:hover{background-color:rgba(181,182,177,.3)}.circle{border-radius:100%;border:2px solid #E1E1E1;width:23px;line-height:23px}.circle:hover{background-color:#E1E1E1;border:2px solid #E1E1E1;color:#34362C;cursor:pointer}.current-section,.current-section-pink{display:inline-block;width:23px;line-height:23px;color:#fff}.current-section{background-color:#000;border:2px solid #000}.current-section-pink{background-color:#F42565;border:2px solid #F42565}
+body {
+/*  background-attachment: fixed;*/
+  background-image: url(images/FJORD_CT_Test_Asset_background_full.jpg);
+  height: 3008px; /*2048px;*/
+}
+
+.fixed-sidebar{
+  position:fixed; top:0%; right:0%;
+}
+
+.fixed-content{
+  position:fixed;
+}
+
+/*SIDEBAR*/
+.sidebar {
+  height: 100vh;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: justify;
+  -moz-text-align-last: center;
+  text-align-last: center; }
+
+.sidebar {
+  color: black;
+  margin-bottom: 9px; }
+
+/*CONTENT*/
+
+
+.content-flex {
+  height: 100vh;
+  display: flex;
+
+}
+
+.content{
+  padding-top: 20px;
+  margin: auto;
+}
+
+
+.text{
+  padding-bottom: 10%;
+}
+
+img {
+  width: 45px;
+  padding-bottom: 27px; }
+
+button {
+  display: inline-block;
+  height: 60px;
+  margin: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  background-color: transparent;
+  border: 3.8px solid white;
+  cursor: pointer;
+  font-size: 90%;
+  font-weight: 700;
+  padding: 0 55px; }
+
+button:hover{
+  background-color: rgba(181, 182, 177, .3);
+  border: 3.8px solid white;
+}
+
+.circle {
+    border-radius: 100%;
+    border: 2px solid #E1E1E1;
+    display:inline-block;
+    width: 23px;
+    line-height: 23px;
+    cursor: pointer;
+}
+
+.circle:hover {
+  background-color: #E1E1E1;
+  border: 2px solid #E1E1E1;;
+  color: #34362C;
+  cursor: pointer;}
+
+.current-section {
+  display:inline-block;
+  width: 23px;
+  line-height: 23px;
+  background-color: black;
+  border: 2px solid black;
+  color: white;
+}
+
+.current-section-pink{
+  display:inline-block;
+  width: 23px;
+  line-height: 23px;
+  background-color: #F42565;
+  border: 2px solid #F42565;
+  color: white;
+}
+
+
